build(project): initiate, config and setup project
build(lint): install and setup ruff & black

build(testing): install and setup testing and coverage

build(coveralls): setup ci coveralls

test(dummy): test coverage

test(coverage): enable branch coverage

build(pyproject): migrate configurations to pyproject file (#4)

* build(ruff): migrate ruff to pyproject

* ci(commitizen): migrate config to pyproject

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# mypy
+.mypy_cache
+
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
@@ -10,11 +22,14 @@
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# pytest
+.pytest_cache
+
+# python
+__pycache__
+
+# ruff
+.ruff_cache
+
+# tests
+coverage
