--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,80 @@ classifiers = [
   "Topic :: Software Development",
   "Topic :: Utilities"
 ]
-packages = []
-include = []
+packages = [
+  { include = "pypackage", from = "src" }
+]
+include = [
+  { path = "tests", format = "sdist" }
+]
 exclude = []
 
 [tool.poetry.urls]
 "JIRA" = "https://menseb.atlassian.net/jira/software/projects/DB/boards/5"
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
+
+[tool.coverage.html]
+directory = "./coverage/html"
+
+[tool.coverage.lcov]
+output = "./coverage/lcov.info"
+
+[tool.coverage.report]
+fail_under = 100
+show_missing = true
+exclude_lines = [
+    "if __name__ == \"__main__\":",
+    "def __repr__",
+    "def __str__",
+]
+
+[tool.coverage.run]
+branch = true
+parallel = true
+source = ["src"]
+omit = ["**/__init__.py"]
+data_file = "coverage/.coverage"
+
+[tool.mypy]
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
+addopts = [
+  "--verbose", 
+  "--import-mode=importlib", 
+  "--cov-report=html", 
+  "--cov-report=lcov", 
+  "--cov-report=term-missing"
+]
+
+[tool.ruff]
+# A list of rule codes or prefixes to enable.
+select = ["ALL"]
+
+# A list of rule codes or prefixes to ignore.
+ignore = ["D203", "D213"]
+
+# A list of rule codes or prefixes to consider autofixable
+fixable = ["ALL"]
+
+# A list of rule codes or prefixes to consider non-autofix-able.
+unfixable = []
+
+# Exclude a variety of commonly ignored directories.
+exclude = []
+
+# A list of mappings from file pattern to rule codes or prefixes to exclude.
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["S101", "PLR2004"]
 
 
 [tool.poetry.dependencies]
@@ -45,4 +113,16 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.7.0"
+mypy = "^1.5.1"
+
+
+[tool.poetry.group.lint.dependencies]
+ruff = "^0.0.286"
+black = "^23.7.0"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.0"
+pytest-mock = "^3.11.1"
+pytest-cov = "^4.1.0"
 
