--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
 
-# Environments
+# environments
 .env
 .venv
 env/
@@ -18,3 +18,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# ruff
+.ruff_cache
