build(testing): install and setup testing and coverage

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,3 +28,10 @@ jobs:
         run: poetry install
       - name: Lint
         run: poetry run ruff .
+      - name: Test
+        run: poetry run pytest --cov
+      # - name: Coveralls
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     debug: true
+      #     github-token: ${{ github.token }}
