--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,38 @@ classifiers = [
   "Topic :: Software Development",
   "Topic :: Utilities"
 ]
-packages = []
-include = []
+packages = [
+  { include = "pypackage", from = "src" }
+]
+include = [
+  { path = "tests", format = "sdist" }
+]
 exclude = []
 
 [tool.poetry.urls]
 "JIRA" = "https://menseb.atlassian.net/jira/software/projects/DB/boards/5"
 
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
+addopts = ["--import-mode=importlib", "--verbose", "--cov-report=lcov"]
+
+[tool.coverage.run]
+branch = true
+parallel = true
+source = ["src"]
+omit = ["**/__init__.py"]
+data_file = "coverage/.coverage"
+
+[tool.coverage.report]
+fail_under = 100
+show_missing = true
+
+[tool.coverage.html]
+directory = "coverage"
+
+[tool.coverage.lcov]
+output = "coverage/coverage.lcov"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -50,4 +75,10 @@ commitizen = "^3.7.0"
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.0.286"
 black = "^23.7.0"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.0"
+pytest-mock = "^3.11.1"
+pytest-cov = "^4.1.0"
 
