--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,8 +30,8 @@ jobs:
         run: poetry run ruff .
       - name: Test
         run: poetry run pytest --cov
-      # - name: Coveralls
-      #   uses: coverallsapp/github-action@master
-      #   with:
-      #     debug: true
-      #     github-token: ${{ github.token }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          debug: true
+          github-token: ${{ github.token }}
