--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,25 @@ show_missing = true
 [tool.coverage.lcov]
 output = "./coverage/lcov.info"
 
+[tool.ruff]
+# A list of rule codes or prefixes to enable.
+select = ["ALL"]
+
+# A list of rule codes or prefixes to ignore.
+ignore = ["D203", "D213"]
+
+# A list of rule codes or prefixes to consider autofixable
+fixable = ["ALL"]
+
+# A list of rule codes or prefixes to consider non-autofix-able.
+unfixable = []
+
+# Exclude a variety of commonly ignored directories.
+exclude = []
+
+# A list of mappings from file pattern to rule codes or prefixes to exclude.
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["S101", "PLR2004"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
