--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,10 +42,20 @@ exclude = []
 [tool.poetry.urls]
 "JIRA" = "https://menseb.atlassian.net/jira/software/projects/DB/boards/5"
 
-[tool.pytest.ini_options]
-pythonpath = "src"
-testpaths = ["tests"]
-addopts = ["--import-mode=importlib", "--verbose", "--cov-report=lcov"]
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
+
+[tool.coverage.lcov]
+output = "./coverage/lcov.info"
+
+[tool.coverage.report]
+fail_under = 100
+show_missing = true
 
 [tool.coverage.run]
 branch = true
@@ -54,12 +64,10 @@ source = ["src"]
 omit = ["**/__init__.py"]
 data_file = "coverage/.coverage"
 
-[tool.coverage.report]
-fail_under = 100
-show_missing = true
-
-[tool.coverage.lcov]
-output = "./coverage/lcov.info"
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
+addopts = ["--import-mode=importlib", "--verbose", "--cov-report=lcov"]
 
 [tool.ruff]
 # A list of rule codes or prefixes to enable.
@@ -80,6 +88,7 @@ exclude = []
 # A list of mappings from file pattern to rule codes or prefixes to exclude.
 [tool.ruff.per-file-ignores]
 "tests/**/*.py" = ["S101", "PLR2004"]
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
