--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,3 +126,8 @@ pytest = "^7.4.0"
 pytest-mock = "^3.11.1"
 pytest-cov = "^4.1.0"
 
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = {extras = ["i18n"], version = "^1.5.2"}
+mkdocstrings = {extras = ["python"], version = "^0.22.0"}
+
