--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,15 +21,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Cache Poetry
-        id: cache-poetry
-        uses: actions/cache@v3
-        with:
-          path: ~/.local
-          key: poetry-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/poetry.lock') }}
       - name: Poetry
-        if: steps.cache-poetry.outputs.cache-hit != true
-        run: curl -sSL https://install.python-poetry.org | python -
+        uses: .github/workflows/poetry.yaml
+      # - name: Cache Poetry
+      #   id: cache-poetry
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ~/.local
+      #     key: poetry-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/poetry.lock') }}
+      # - name: Poetry
+      #   if: steps.cache-poetry.outputs.cache-hit != true
+      #   run: curl -sSL https://install.python-poetry.org | python -
       - name: Cache Venv
         id: cache-venv
         uses: actions/cache@v3
