ci(poetry): setup cache logic in ci workflow (#6)
* ci(poetry): setup cache logic in ci workflow

* ci(poetry): test poetry & venv cache

* ci(poetry): test poetry cache workflow

* ci(poetry): test composite action

* build(poetry): update python and install dependencies

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,22 +10,20 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Version
-        run: |
-          echo "PYTHON_VERSION=$(cat ${{ github.workspace }}/pyproject.toml | 
-          grep 'python = ' | 
-          grep -o -P '(?<=\^).*(?=\")')" >> $GITHUB_ENV
-      - name: Setup
+      - name: Version Python
+        uses: ./.github/actions/python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python -
-      - name: Install
-        run: poetry install --only lint,test
+      - name: Install Poetry
+        uses: ./.github/actions/poetry
+      - name: Install Virtualenv
+        uses: ./.github/actions/virtualenv
+        with:
+          groups: --only lint,test
       - name: Lint
         run: poetry run ruff .
       - name: Test
