test(coverage): disable fail_under temporary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ directory = "./coverage/html"
 output = "./coverage/lcov.info"
 
 [tool.coverage.report]
-fail_under = 100
+# fail_under = 100
 show_missing = true
 exclude_lines = [
     "if __name__ == \"__main__\":",
