--- a/.github/actions/poetry/action.yaml
+++ b/.github/actions/poetry/action.yaml
@@ -9,7 +9,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: ~/.local
-        key: poetry-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/poetry.lock') }}
+        key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
     - name: Install Poetry
       if: steps.cache-poetry.outputs.cache-hit != true
       shell: bash
