--- a/.github/actions/python/action.yaml
+++ b/.github/actions/python/action.yaml
@@ -1,12 +1,10 @@
-name: Python Version
-description: Extract python version
+name: Setup Python
+description: Setup python with pyproject
 
 runs:
   using: composite
   steps:
-    - name: Version Python
-      shell: bash
-      run: |
-        echo "PYTHON_VERSION=$(cat ${{ github.workspace }}/pyproject.toml | 
-        grep 'python = ' | 
-        grep -o -P '(?<=\^).*(?=\")')" >> $GITHUB_ENV
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version-file: pyproject.toml
