--- a/.github/workflows/deploy-ftp.yaml
+++ b/.github/workflows/deploy-ftp.yaml
@@ -4,17 +4,22 @@ on:
   workflow_call:
   workflow_dispatch:
 
+env:
+  dir: tmp
+
 jobs:
   deploy-ftp:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Poetry
+        uses: ./.github/actions/poetry
       - name: Prepare Content
         run: |
-          mkdir content &&
-          cp -r src content &&
-          cp pyproject.toml LICENSE.txt README.md content
+          mkdir ${{ env.dir }} && 
+          poetry export -o ${{ env.dir }}/requirements.txt --only django &&
+          cd src && cp -r project app manage.py ../${{ env.dir }}
       - name: Deploy FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
@@ -23,6 +28,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          local-dir: ./content/
+          local-dir: ./${{ env.dir }}/
           server-dir: ./
           log-level: verbose
