--- a/.github/workflows/deploy-ftp.yaml
+++ b/.github/workflows/deploy-ftp.yaml
@@ -3,12 +3,36 @@ name: Deploy FTP
 on:
   workflow_call:
   workflow_dispatch:
+  workflow_run:
+    workflows: [Continuous Integration]
+    types:
+      - completed
 
 env:
   dir: tmp
 
 jobs:
+  filter:
+    if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      source: ${{ steps.filter.outputs.source }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Filter Changes
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            source:
+              - "src/**"
+
   deploy-ftp:
+    needs: filter
+    if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.source == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,7 +41,7 @@ jobs:
         uses: ./.github/actions/poetry
       - name: Prepare Content
         run: |
-          mkdir ${{ env.dir }} && 
+          mkdir ${{ env.dir }} &&
           poetry export -o ${{ env.dir }}/requirements.txt --only django &&
           cd src && cp -r project app manage.py ../${{ env.dir }}
       - name: Deploy FTP
