--- a/.github/workflows/paths.yaml
+++ b/.github/workflows/paths.yaml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Paths
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - "**.py"
 
 jobs:
-  ci:
+  paths:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
