--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -2,12 +2,13 @@ name: Lint & Test
 
 on:
   workflow_run:
-    workflows: ["setup"]
+    workflows: ["Setup"]
     types:
       - completed
 
 jobs:
   lint-test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Install Virtualenv
