build(workflow): test workflow with github paths (#11)
* build(workflow): test workflow with github paths

* build(temp): test workflow call with python files

* build(paths): test workflow call without python files

* build(workflows): test workflows using the workflow_run conditions

* build(workflows): add missing success condition

* test(workflows): test workflows with update to python files

* build(workflows): update ci with paths logic for python files

* build(virtualenv): remove the --on-interaction flag

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -1,23 +1,16 @@
-name: Continuous Integration
+name: Lint & Test
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    paths:
-      - "**.py"
+  workflow_run:
+    workflows: ["Setup"]
+    types:
+      - completed
 
 jobs:
-  ci:
+  lint-test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: ./.github/actions/python
-      - name: Install Poetry
-        uses: ./.github/actions/poetry
       - name: Install Virtualenv
         uses: ./.github/actions/virtualenv
         with:
