--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -1,22 +1,21 @@
 name: Lint & Test
 
 on:
-  pull_request:
-  # workflow_run:
-  #   workflows: ["Setup"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["Setup"]
+    types:
+      - completed
 
 jobs:
   lint-test:
-    needs: [Setup]
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Upload Cache
-        uses: actions/cache@v3
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
         with:
-          path: ~/.cache/pypoetry/virtualenvs
+          name: setup
+          path: ${{ github.workspace }}
       - name: Install Virtualenv
         uses: ./.github/actions/virtualenv
         with:
