build(workflows): update lint-test workflow with cache from venv (#12)
* build(workflows): update lint-test workflow with cache from venv

* build(workflows): test workflows with needs instead

* build(workflows): test logic with upload and download artifacts

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -11,6 +11,11 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: setup
+          path: ${{ github.workspace }}
       - name: Install Virtualenv
         uses: ./.github/actions/virtualenv
         with:
