--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,11 +5,33 @@ on:
     branches:
       - master
   pull_request:
-    paths:
-      - "**.py"
 
 jobs:
+  filter:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      changes: ${{ steps.filter.outputs.changes }}
+      markdown: ${{ steps.filter.outputs.markdown }}
+      python: ${{ steps.filter.outputs.python }}
+      yaml: ${{ steps.filter.outputs.yaml }}
+    steps:
+      - name: Filter Changes
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            markdown:
+              - "**.md"
+            python:
+              - "**.py"
+            yaml:
+              - "**.yaml"
+
   ci:
+    needs: filter
+    if: ${{ needs.filter.outputs.changes != '[]' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -22,11 +44,17 @@ jobs:
         uses: ./.github/actions/virtualenv
         with:
           groups: --only lint,test
-      - name: Lint
-        run: poetry run ruff .
-      - name: Test
-        run: poetry run pytest --cov
+      - name: Lint Markdown
+        if: ${{ needs.filter.outputs.markdown == 'true' }}
+        run: echo "LINT MARKDOWN"
+      - name: Lint YAML
+        if: ${{ needs.filter.outputs.yaml == 'true' }}
+        run: echo "LINT YAML"
+      - name: Lint & Test Python
+        if: ${{ needs.filter.outputs.python == 'true' }}
+        run: poetry run ruff . && poetry run pytest --cov
       - name: Coveralls
+        if: ${{ needs.filter.outputs.python == 'true' }}
         uses: coverallsapp/github-action@master
         with:
           debug: true
