--- a/.github/workflows/deploy-ftp.yaml
+++ b/.github/workflows/deploy-ftp.yaml
@@ -12,46 +12,51 @@ env:
   dir: tmp
 
 jobs:
-  filter:
-    if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-    outputs:
-      source: ${{ steps.filter.outputs.source }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Filter Changes
-        uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            source:
-              - "src/**"
+      - name: Displays
+        run: echo github.ref
+  # filter:
+  #   if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     pull-requests: read
+  #   outputs:
+  #     source: ${{ steps.filter.outputs.source }}
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v3
+  #     - name: Filter Changes
+  #       uses: dorny/paths-filter@v2
+  #       id: filter
+  #       with:
+  #         filters: |
+  #           source:
+  #             - "src/**"
 
-  deploy-ftp:
-    needs: filter
-    if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.source == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install Poetry
-        uses: ./.github/actions/poetry
-      - name: Prepare Content
-        run: |
-          mkdir ${{ env.dir }} &&
-          poetry export -o ${{ env.dir }}/requirements.txt --only django &&
-          cd src && cp -r project app manage.py ../${{ env.dir }}
-      - name: Deploy FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          port: ${{ secrets.FTP_PORT }}
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ftps
-          local-dir: ./${{ env.dir }}/
-          server-dir: ./
-          log-level: verbose
+  # deploy-ftp:
+  #   needs: filter
+  #   if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.source == 'true' }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Install Poetry
+  #       uses: ./.github/actions/poetry
+  #     - name: Prepare Content
+  #       run: |
+  #         mkdir ${{ env.dir }} &&
+  #         poetry export -o ${{ env.dir }}/requirements.txt --only django &&
+  #         cd src && cp -r project app manage.py ../${{ env.dir }}
+  #     - name: Deploy FTP
+  #       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+  #       with:
+  #         port: ${{ secrets.FTP_PORT }}
+  #         server: ${{ secrets.FTP_SERVER }}
+  #         username: ${{ secrets.FTP_USERNAME }}
+  #         password: ${{ secrets.FTP_PASSWORD }}
+  #         protocol: ftps
+  #         local-dir: ./${{ env.dir }}/
+  #         server-dir: ./
+  #         log-level: verbose
