--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,47 +4,52 @@ on:
   workflow_call:
   workflow_dispatch:
   workflow_run:
+    branches: [master]
+    types: [completed]
     workflows: [Continuous Integration]
-    types:
-      - completed
 
 permissions:
   contents: write
 
 jobs:
-  filter:
-    if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-    outputs:
-      docs: ${{ steps.filter.outputs.docs }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Filter Changes
-        uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            docs:
-              - "mkdocs.yaml"
-              - "docs/**"
+      - name: Displays
+        run: echo github.ref
+  # filter:
+  #   if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     pull-requests: read
+  #   outputs:
+  #     docs: ${{ steps.filter.outputs.docs }}
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v3
+  #     - name: Filter Changes
+  #       uses: dorny/paths-filter@v2
+  #       id: filter
+  #       with:
+  #         filters: |
+  #           docs:
+  #             - "mkdocs.yaml"
+  #             - "docs/**"
 
-  docs:
-    needs: filter
-    if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.docs == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: ./.github/actions/python
-      - name: Install Poetry
-        uses: ./.github/actions/poetry
-      - name: Install Virtualenv
-        uses: ./.github/actions/virtualenv
-        with:
-          groups: --only docs
-      - name: Deploy Documentation
-        run: poetry run mkdocs gh-deploy --force
+  # docs:
+  #   needs: filter
+  #   if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.docs == 'true' }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v3
+  #     - name: Setup Python
+  #       uses: ./.github/actions/python
+  #     - name: Install Poetry
+  #       uses: ./.github/actions/poetry
+  #     - name: Install Virtualenv
+  #       uses: ./.github/actions/virtualenv
+  #       with:
+  #         groups: --only docs
+  #     - name: Deploy Documentation
+  #       run: poetry run mkdocs gh-deploy --force
