build(yaml): install yamllint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ mypy = "^1.5.1"
 ruff = "^0.0.286"
 black = "^23.7.0"
 pymarkdownlnt = "^0.9.13.3"
+yamllint = "^1.32.0"
 
 
 [tool.poetry.group.test.dependencies]
