ci(yamllint): add yamllint to ci workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         run: poetry run pymarkdown scan .
       - name: Lint YAML
         if: ${{ needs.filter.outputs.yaml == 'true' }}
-        run: echo "LINT YAML"
+        run: poetry run yamllint .
       - name: Lint & Test Python
         if: ${{ needs.filter.outputs.python == 'true' }}
         run: poetry run ruff . && poetry run pytest --cov
