--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ ruff = "^0.0.286"
 black = "^23.7.0"
 pymarkdownlnt = "^0.9.13.3"
 yamllint = "^1.32.0"
+yamlfix = "^1.14.0"
 
 
 [tool.poetry.group.test.dependencies]
