--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,11 @@ exclude = []
 [tool.ruff.per-file-ignores]
 "tests/**/*.py" = ["S101", "PLR2004"]
 
+[tool.yamlfix]
+comments_min_spaces_from_content = 1
+preserve_quotes = true
+whitelines = 1
+
 
 [tool.poetry.dependencies]
 python = "^3.11.1"
