--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,3 +1,4 @@
+---
 name: Documentation
 
 on:
@@ -11,14 +12,19 @@ on:
 permissions:
   contents: write
 
+env:
+  dispatch: ${{ github.event_name != 'workflow_dispatch' }}
+  success: ${{ github.event.workflow_run.conclusion == 'success' }}
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Displays
         run: echo github.ref
+
   filter:
-    if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ env.dispatch }} && ${{ env.success }}
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
@@ -38,7 +44,7 @@ jobs:
 
   docs:
     needs: filter
-    if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.docs == 'true' }}
+    if: ${{ env.dispatch }} || ${{ needs.filter.outputs.docs == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
