--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
+---
 name: Continuous Integration
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
 
 jobs:
@@ -30,6 +30,7 @@ jobs:
               - "**.py"
             yaml:
               - "**.yaml"
+              - "**.yml"
 
   ci:
     needs: filter
