build(yaml): install & setup yamllint (#16)
* build(markdown): install and setup markdown lint (#15)

* build(markdown): install and setup markdown lint

* build(markdown): test lint workflow markdown files

* build(yaml): install yamllint

* ci(yamllint): add yamllint to ci workflow

* build(vscode): enable yaml schemas for mkdocs config

* build(yaml): create yaml lint config

* build(yaml): install yamlfix

* build(gitignore): update path with / as folder

* build(scripts): create scripts to call yamlfix with exclude of gitignore paths

* build(yamlfix): update rules for linting

* build(yamllint): update script to replace file endings from crlf to lf

* build(yaml): apply yamllint and yamlfix

* build(yamlfix): move yamlfix from lint to dev dependencies

* build(yamlfix): update file name and logic to fix yaml filex

* build(gitignore): add vscode folder to gitignore

* build(scripts): update scripts folder structure

* build(yamlfix): update script yamlfix logic

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
+---
 name: Continuous Integration
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
 
 jobs:
@@ -30,6 +30,7 @@ jobs:
               - "**.py"
             yaml:
               - "**.yaml"
+              - "**.yml"
 
   ci:
     needs: filter
@@ -51,7 +52,7 @@ jobs:
         run: poetry run pymarkdown scan .
       - name: Lint YAML
         if: ${{ needs.filter.outputs.yaml == 'true' }}
-        run: echo "LINT YAML"
+        run: poetry run yamllint .
       - name: Lint & Test Python
         if: ${{ needs.filter.outputs.python == 'true' }}
         run: poetry run ruff . && poetry run pytest --cov
