--- a/.github/workflows/deploy-ftp.yaml
+++ b/.github/workflows/deploy-ftp.yaml
@@ -1,3 +1,4 @@
+---
 name: Deploy FTP
 
 on:
@@ -16,9 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Displays
-        run: echo ${{ github.ref }} ${{ github.event_name != 'workflow_dispatch' }}
+        run: echo ${{ github.event_name != 'workflow_dispatch' }}
+
   filter:
-    if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: |
+      ${{ github.event_name != 'workflow_dispatch' }} &&
+      ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
@@ -35,28 +39,30 @@ jobs:
             source:
               - "src/**"
 
-  # deploy-ftp:
-  #   needs: filter
-  #   if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.source == 'true' }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Install Poetry
-  #       uses: ./.github/actions/poetry
-  #     - name: Prepare Content
-  #       run: |
-  #         mkdir ${{ env.dir }} &&
-  #         poetry export -o ${{ env.dir }}/requirements.txt --only django &&
-  #         cd src && cp -r project app manage.py ../${{ env.dir }}
-  #     - name: Deploy FTP
-  #       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-  #       with:
-  #         port: ${{ secrets.FTP_PORT }}
-  #         server: ${{ secrets.FTP_SERVER }}
-  #         username: ${{ secrets.FTP_USERNAME }}
-  #         password: ${{ secrets.FTP_PASSWORD }}
-  #         protocol: ftps
-  #         local-dir: ./${{ env.dir }}/
-  #         server-dir: ./
-  #         log-level: verbose
+  deploy-ftp:
+    needs: filter
+    if: |
+      ${{ github.event_name == 'workflow_dispatch' }} ||
+      ${{ needs.filter.outputs.source == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Poetry
+        uses: ./.github/actions/poetry
+      - name: Prepare Content
+        run: |
+          mkdir ${{ env.dir }} &&
+          poetry export -o ${{ env.dir }}/requirements.txt --only django &&
+          cd src && cp -r project app manage.py ../${{ env.dir }}
+      - name: Deploy FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          port: ${{ secrets.FTP_PORT }}
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          protocol: ftps
+          local-dir: ./${{ env.dir }}/
+          server-dir: ./
+          log-level: verbose
