--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,3 +1,4 @@
+---
 name: Documentation
 
 on:
@@ -17,39 +18,44 @@ jobs:
     steps:
       - name: Displays
         run: echo github.ref
-  # filter:
-  #   if: ${{ github.event_name != 'workflow_dispatch' }} && ${{ github.event.workflow_run.conclusion == 'success' }} && github.ref == 'refs/heads/master'
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     pull-requests: read
-  #   outputs:
-  #     docs: ${{ steps.filter.outputs.docs }}
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v3
-  #     - name: Filter Changes
-  #       uses: dorny/paths-filter@v2
-  #       id: filter
-  #       with:
-  #         filters: |
-  #           docs:
-  #             - "mkdocs.yaml"
-  #             - "docs/**"
 
-  # docs:
-  #   needs: filter
-  #   if: ${{ github.event_name == 'workflow_dispatch' }} || ${{ needs.filter.outputs.docs == 'true' }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v3
-  #     - name: Setup Python
-  #       uses: ./.github/actions/python
-  #     - name: Install Poetry
-  #       uses: ./.github/actions/poetry
-  #     - name: Install Virtualenv
-  #       uses: ./.github/actions/virtualenv
-  #       with:
-  #         groups: --only docs
-  #     - name: Deploy Documentation
-  #       run: poetry run mkdocs gh-deploy --force
+  filter:
+    if: |
+      github.event_name != 'workflow_dispatch' &&
+      ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      docs: ${{ steps.filter.outputs.docs }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Filter Changes
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            docs:
+              - "mkdocs.yaml"
+              - "docs/**"
+
+  docs:
+    needs: filter
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      ${{ needs.filter.outputs.docs == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: ./.github/actions/python
+      - name: Install Poetry
+        uses: ./.github/actions/poetry
+      - name: Install Virtualenv
+        uses: ./.github/actions/virtualenv
+        with:
+          groups: --only docs
+      - name: Deploy Documentation
+        run: poetry run mkdocs gh-deploy --force
