--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,10 @@ omit = [
   "src/manage.py",
 ]
 
+[tool.djlint]
+profile = "django"
+use_gitignore = true
+
 [tool.mypy]
 ignore_missing_imports = true
 
@@ -130,6 +134,7 @@ ruff = "^0.0.286"
 black = "^23.7.0"
 pymarkdownlnt = "^0.9.13.3"
 yamllint = "^1.32.0"
+djlint = "^1.32.1"
 
 
 [tool.poetry.group.test.dependencies]
