--- a/.github/actions/virtualenv/action.yaml
+++ b/.github/actions/virtualenv/action.yaml
@@ -6,6 +6,9 @@ inputs:
   groups:
     required: false
     description: install specific dependency groups
+  path:
+    required: true
+    description: path to virtualenv cache folder.
 
 runs:
   using: composite
@@ -14,7 +17,8 @@ runs:
       id: cache-venv
       uses: actions/cache@v3
       with:
-        path: ~/.cache/pypoetry/virtualenvs
+        # path: ~/.cache/pypoetry/virtualenvs
+        path: ${{ inputs.path }}/virtualenvs
         key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
     - name: Install Virtualenv
       shell: bash
